Fix spacing

--- a/frontend/app/scss/utilities/_variables.scss
+++ b/frontend/app/scss/utilities/_variables.scss
@@ -50,9 +50,12 @@ $color-twitch: #673ab7;
 $color-google: #afafaf;
 $color-discord: #8c9eff;
 
-$font-main-regular: "Roboto",Arial;
-$font-main-ticket: "Bahnschrift",Arial;
-$font-additional-regular: "Bahnschrift",Arial;
+$font-main-regular: "Roboto",
+Arial;
+$font-main-ticket: "Bahnschrift",
+Arial;
+$font-additional-regular: "Bahnschrift",
+Arial;
 
 $body-font-size: 14;
 $body-font-weight: 300;
